# security-agent

./: .gitignore  AGENT.md  CHANGELOG.md  IMPLEMENTATION_ROADMAP.md  LICENSE  PRD.md  README.md  RELEASE_VALIDATION.md  TECHNICAL_SPEC.md  pyproject.toml
security_agent/: advisories.py  bundler.py  cli.py  config.py  investigation.py  models.py  repo.py  reporting.py  scanner.py  terminal_ui.py  versioning.py
security_agent/data/: advisories.json
tests/: test_advisories.py  test_bundler.py  test_cli.py  test_config.py  test_gemini_investigation.py  test_investigation.py  test_provider_investigation.py  test_reporting.py  test_scanner.py
