[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "security-agent"
version = "0.1.0"
description = "Local CLI for Rails dependency vulnerability triage"
readme = "PRD.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
security-agent = "security_agent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

